Updating my information about me. Added my photo.

--- a/index.html
+++ b/index.html
@@ -42,26 +42,22 @@
         <div class="card-body bg-light">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">
+                    <img src="./images/Me.jpg" alt="Placeholder" class="img-thumbnail" id="imgsize">
                 </div>
                 <div class="col-9">
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum tristique,
-                      nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae
-                      felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem,
-                      non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus,
-                      luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et
-                      neque fringilla ultricies. Aenean at feugiat elit, a posuere justo. Pellentesque egestas
-                      dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id
-                      posuere sem congue a.
+                      My name is Cesar Martinez, I just came to this country 2 years ago. I live in Gaithersburg.  I have a bachelor’s degree in information systems, in which I have studied many programing languages, database programs and networking practices and protocols. 
+                     <br> 
+                      My love for technology since I was very young, I had decided to study Systems Engineering, and during this process I became passionate about programing, databases and GIS. 
+One of those projects, was the one where I created an environmental management plan to identify a site for a waste transfer station in which I used these three technologies, the programing , databases and GIS, to help identify the best location that would not affect the principal water sources , the environmental biodiversity nor community.
+
                     </p>
                 </div>
             </div>
             <div class="row">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum tristique,
-                    nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae
-                    felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem.
+                  I was a Elite speed skater in my country. I represent provincial and national team for international competitions.
+                  My Hobby is biking or skating. I love spending time with my children.
                   </p>
             </div>
 
