--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,43 @@
         </div>
       </nav>
 
+      <section class="container p-5 my-5 border bg-light">
+        <div class="card">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <h3 class="card-header">Contact</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body mx-2 mt-2">
+                <div class="md-form">
+                    <label for="ContactName">Name</label>
+                    <input type="text" id="ContactName" class="form-control" placeholder="Enter your name" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                      </div>
+                </div>
+                <div class="md-form">
+                    <label for="Email">Email</label>
+                    <input type="email" id="Email" class="form-control" placeholder="name@example.com" required>
+                </div>
+                <div class="md-form">
+                    <label for="Message">Message</label>
+                    <textarea type="text" id="Message" rows="3" class="form-control md-textarea" placeholder="Message"></textarea>
+                     <div class="form-group">
+                    </div>
+                </div>
+                <div class="row d-flex mb-2">
+                    <div class="col-md-12 d-flex  ml-auto">
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
       <footer class="text-light bg-dark fixed-bottom p-2">
         <div class="row text-center">
