Updating information in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-    <span class="navbar-brand mb-1 h1">Cesar Martinez</span>
+    <span class="navbar-brand mb-1 h1">Cesar A Martinez</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
                     </div>
                     <div class="col-9">
                         <p>
-                          My name is Cesar Martinez, I just came to this country 2 years ago. I live in Gaithersburg.  I have a bachelor’s degree in information systems, in which I have studied many programing languages, database programs and networking practices and protocols. 
+                         I just came to this country 2 years ago. I live in Gaithersburg.  I have a bachelor’s degree in information systems, in which I have studied many programing languages, database programs and networking practices and protocols. 
                         <br> 
                           My love for technology since I was very young, I had decided to study Systems Engineering, and during this process I became passionate about programing, databases and GIS. 
                           One of those projects, was the one where I created an environmental management plan to identify a site for a waste transfer station in which I used these three technologies, the programing , databases and GIS, to help identify the best location that would not affect the principal water sources , the environmental biodiversity nor community.
