--- a/portfolio.html
+++ b/portfolio.html
@@ -46,62 +46,62 @@
                 
                     <div class="col-lg-3 col-md-4 col-6"> <!-- Grid system for desktop, mobile, tablet -->
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture1.jpg" alt="">
                           </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/aob0ukAYfuI/400x300" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture2.jpg" alt="">
                           </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/EUfxH-pze7s/400x300" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture3.jpg" alt="">
                           </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/M185_qYH8vg/400x300" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture4.jpg" alt="">
                           </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/sesveuG_rNo/400x300" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture5.jpg" alt="">
                           </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/AvhMzHwiE_0/400x300" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture6.jpg" alt="">
                           </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/2gYsZUmockw/400x300" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture7.jpg" alt="">
                           </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/EMSDtjVHdQ8/400x300" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture8.jpg" alt="">
                           </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/8mUEy0ABdNE/400x300" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture9.jpg" alt="">
                           </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/G9Rfc1qccH4/400x300" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture10.jpg" alt="">
                           </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/aJeH0KcFkuc/400x300" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture11.jpg" alt="">
                           </a>
                     </div>
                     <div class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/p2TQ-3Bh3Oo/400x300" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture12.jpg" alt="">
                           </a>
                     </div>
                   </div>
