Changing tags to semantic elements in contact.html, index.html and portfolio.html files.

--- a/contact.html
+++ b/contact.html
@@ -32,14 +32,14 @@
 
       <section class="container p-5 my-5 border bg-light">
         <div class="card">
-            <div class="row">
+            <header class="row">
                 <div class="col-md-12">
                     <div class="card">
                         <h3 class="card-header">Contact</h3>
                     </div>
                 </div>
-            </div>
-            <div class="card-body mx-2 mt-2">
+            </header>
+            <article class="card-body mx-2 mt-2">
                 <div class="md-form">
                     <label for="ContactName">Name</label>
                     <input type="text" id="ContactName" class="form-control" placeholder="Enter your name" required>
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
         </div>
     </section>
 
@@ -75,11 +75,11 @@
           </div> 
         </div>  
         <div class="row text-center">
-          <div class="col-md-12">
+          <nav class="col-md-12">
             <a href="https://www.facebook.com/cesaraugusto.martinezauquilla" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/cesaguma" class="fa fa-twitter" target="_blank"></a>
             <a href="https://www.linkedin.com/in/cesar-augusto-martinez-auquilla-03934a16b/" class="fa fa-linkedin" target="_blank"></a>
-          </div>
+          </nav>
         </div>
           
     </footer>
