--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
     </div>
   </nav>
 
-    <div class="container p-5 my-5 border bg-light">
+    <section class="container p-5 my-5 border bg-light">
       <div class="card">
         <div class="row">
           <div class="col-md-12">
             <div class="card">
               <h1 class="card-header">About Me</h1>
             </div>
-            <div class="card-body bg-light">
+            <article class="card-body bg-light">
                 <div class="row">
-                    <div class="col-md-3">
+                    <figure class="col-md-3">
                         <img src="./images/Me.jpg" alt="Placeholder" class="img-thumbnail" id="imgsize">
-                    </div>
+                    </figure>
                     <div class="col-9">
                         <p>
                          I just came to this country 2 years ago. I live in Gaithersburg.  I have a bachelor’s degree in information systems, in which I have studied many programing languages, database programs and networking practices and protocols. 
@@ -62,11 +62,11 @@
                       </p>
                 </div>
 
-            </div>
+            </article>
           </div>
         </div>
-    </div>
-  </div>
+      </div>
+    </section>
   
 <footer class="text-light bg-dark fixed-bottom p-2">
     <div class="row text-center">
@@ -75,11 +75,11 @@
       </div> 
     </div>  
     <div class="row text-center">
-      <div class="col-md-12">
+      <nav class="col-md-12">
         <a href="https://www.facebook.com/cesaraugusto.martinezauquilla" class="fa fa-facebook" target="_blank"></a>
         <a href="https://twitter.com/cesaguma" class="fa fa-twitter" target="_blank"></a>
         <a href="https://www.linkedin.com/in/cesar-augusto-martinez-auquilla-03934a16b/" class="fa fa-linkedin" target="_blank"></a>
-      </div>
+      </nav>
     </div>
       
 </footer>
