Updating semantic elements in contact.html, index.html and portfolio.html files.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="card">
               <h1 class="card-header">About Me</h1>
             </div>
-            <article class="card-body bg-light">
+            <div class="card-body bg-light">
                 <div class="row">
                     <figure class="col-md-3">
                         <img src="./images/Me.jpg" alt="Placeholder" class="img-thumbnail" id="imgsize">
@@ -62,7 +62,7 @@
                       </p>
                 </div>
 
-            </article>
+            </div>
           </div>
         </div>
       </div>
