Updating semantic elements in contact.html and portfolio.html files.

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
               <div class="card">
                 <h1 class="card-header">Portfolio</h1>
               </div>
-              <article class="card-body bg-light">
+              <div class="card-body bg-light">
                 <div class="container">
     
                   <hr class="mt-2 mb-3"> <!-- Horizontal devider-->
@@ -108,7 +108,7 @@
                 
                 </div>
   
-              </article>
+              </div>
             </div>
           </div>
         </div>
