--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </header>
-            <article class="card-body mx-2 mt-2">
+            <div class="card-body mx-2 mt-2">
                 <div class="md-form">
                     <label for="ContactName">Name</label>
                     <input type="text" id="ContactName" class="form-control" placeholder="Enter your name" required>
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                 </div>
-            </article>
+            </div>
         </div>
     </section>
 
