--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,6 @@
                 <div class="md-form">
                     <label for="ContactName">Name</label>
                     <input type="text" id="ContactName" class="form-control" placeholder="Enter your name" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                      </div>
                 </div>
                 <div class="md-form">
                     <label for="Email">Email</label>
@@ -53,7 +50,7 @@
                 </div>
                 <div class="md-form">
                     <label for="Message">Message</label>
-                    <textarea id="Message" rows="3" class="form-control md-textarea" placeholder="Message"></textarea>
+                    <textarea type="text" id="Message" rows="3" class="form-control md-textarea" placeholder="Message"></textarea>
                      <div class="form-group">
                     </div>
                 </div>
