--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="md-form">
                     <label for="Message">Message</label>
-                    <textarea type="text" id="Message" rows="3" class="form-control md-textarea" placeholder="Message"></textarea>
+                    <textarea id="Message" rows="3" class="form-control md-textarea" placeholder="Message"></textarea>
                      <div class="form-group">
                     </div>
                 </div>
