Updating semantic element for conctact.html, index.html and portfolio.hmtl  file

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
   </nav>
 
-    <section class="container p-5 my-5 border bg-light">
-      <div class="card">
+    <main class="container p-5 my-5 border bg-light">
+      <section class="card">
         <div class="row">
           <div class="col-md-12">
             <div class="card">
@@ -43,7 +43,7 @@
             <div class="card-body bg-light">
                 <div class="row">
                     <figure class="col-md-3">
-                        <img src="./images/Me.jpg" alt="Placeholder" class="img-thumbnail" id="imgsize">
+                        <img src="./images/Me.jpg" alt="ProfilePicture" class="img-thumbnail" id="imgsize">
                     </figure>
                     <div class="col-9">
                         <p>
@@ -65,8 +65,8 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </main>
   
 <footer class="text-light bg-dark fixed-bottom p-2">
     <div class="row text-center">
