--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,8 @@
         </div>
       </nav>
 
-      <section class="container p-5 my-5 border bg-light">
-        <div class="card">
+      <main class="container p-5 my-5 border bg-light">
+        <section class="card">
           <div class="row">
             <div class="col-md-12">
               <div class="card">
@@ -46,62 +46,62 @@
                 
                     <figure class="col-lg-3 col-md-4 col-6"> <!-- Grid system for desktop, mobile, tablet -->
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-1.jpg" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-1.jpg" alt="picture-1">
                           </a>
                     </figure>
                     <figure class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-2.jpg" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-2.jpg" alt="picture-2">
                           </a>
                     </figure>
                     <figure class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-3.jpg" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-3.jpg" alt="picture-3">
                           </a>
                     </figure>
                     <figure class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-4.jpg" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-4.jpg" alt="picture-4">
                           </a>
                     </figure>
                     <figure class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-5.jpg" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-5.jpg" alt="picture-5">
                           </a>
                     </figure>
                     <figure class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-6.jpg" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-6.jpg" alt="picture-6">
                           </a>
                     </figure>
                     <figure class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-7.jpg" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-7.jpg" alt="picture-7">
                           </a>
                     </figure>
                     <figure class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-8.jpg" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-8.jpg" alt="picture-8">
                           </a>
                     </figure>
                     <figure class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-9.jpg" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-9.jpg" alt="picture-9">
                           </a>
                     </figure>
                     <figure class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-10.jpg" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-10.jpg" alt="picture-10">
                           </a>
                     </figure>
                     <figure class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-11.jpg" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-11.jpg" alt="picture-11">
                           </a>
                     </figure>
                     <figure class="col-lg-3 col-md-4 col-6">
                       <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-12.jpg" alt="">
+                            <img class="img-fluid img-thumbnail" style="width: 200px; height: 200px;" src="./images/picture-12.jpg" alt="picture-12">
                           </a>
                     </figure>
                   </div>
@@ -111,8 +111,8 @@
               </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </main>
 
 
       <footer class="text-light bg-dark fixed-bottom p-2">
