--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
         </div>
       </nav>
 
-      <section class="container p-5 my-5 border bg-light">
-        <div class="card">
+      <main class="container p-5 my-5 border bg-light">
+        <section class="card">
             <header class="row">
                 <div class="col-md-12">
                     <div class="card">
@@ -62,8 +62,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+      </main>
 
       <footer class="text-light bg-dark fixed-bottom p-2">
         <div class="row text-center">
